# python-project-template

./: .envrc  .flake8  .gitignore  BUILD.md  README.md  default.nix  msg_parser.nix  mypy.ini  pyproject.toml  pytest.ini  shell.nix
arthurlib/: __main__.py  lib.py
arthurlib/test/: test_lib.py
cot/: __main__.py  dash.py  lib.py
rcm/: __main__.py  cot.py  cot2.py  dbc_table.py  lib.py
rcm/cotdash/: __main__.py  build_cot_to_underlying_map.py  cot.ipynb  dash.py
rcm/docxreport/: __main__.py  generate.py
