[tool.poetry]
name = "arthurlib"  # has to be the same as first level folder, with - changed to _
version = "0.1.0"
description = ""
authors = ["Arthur Lee <me@arthur.li>"]

[tool.poetry.dependencies]
python = ">=3.11,<3.12"

[tool.poetry.group.dev.dependencies]
pytest = "*"
pylint = "*"
flake8 = "*"
flake8-black = "*"
pyright = "*"
pandas-stubs = "*"
types-requests = "*"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
arthurexec = "arthurlib.lib:hello"
